--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,55 +8,9 @@
     android:paddingHorizontal="15dp"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/search"
-        app:layout_constraintTop_toTopOf="parent"
-        android:hint="@string/QUERY_HINT"
+    <com.kakao.vectormap.MapView
+        android:id="@+id/map_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-
-    <ImageView
-        android:id="@+id/xmark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/search"
-        app:layout_constraintBottom_toBottomOf="@id/search"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/xmark"
-        />
-
-    <TextView
-        android:id="@+id/emptyMainText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:text="@string/EMPTY_TEXT"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/placeResult"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/searchHistory"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/place_item"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/searchHistory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/search"
-        app:layout_constraintBottom_toTopOf="@+id/placeResult"
-        tools:listitem="@layout/search_history_item"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
