--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -30,7 +30,7 @@
 
     <com.kakao.vectormap.MapView
         android:id="@+id/nosearch"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="650dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
