--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/main_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,6 +20,7 @@
         android:background="@android:color/white"
         android:padding="15dp"
         android:elevation="4dp"
-        android:layout_gravity="top" />
+        android:layout_gravity="top"
+        android:soundEffectsEnabled="true"/>
 
 </FrameLayout>
