--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -11,11 +11,11 @@
         android:id="@+id/ivLocation"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:contentDescription="@string/locationmarker"
         android:src="@drawable/location_on_24px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/locationmarker" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -25,22 +25,22 @@
         android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivLocation"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/tvCategory">
 
         <TextView
             android:id="@+id/tvPlaceName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/place_name"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tvPlaceAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/place_address"
-            android:textSize="14sp"
-            android:textColor="#888888"/>
+            android:textColor="#888888"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
