--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,62 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="15dp"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/search"
-        app:layout_constraintTop_toTopOf="parent"
-        android:hint="@string/QUERY_HINT"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-
-    <ImageView
-        android:id="@+id/xmark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/search"
-        app:layout_constraintBottom_toBottomOf="@id/search"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/xmark"
-        />
-
     <TextView
-        android:id="@+id/emptyMainText"
-        android:layout_width="wrap_content"
+        android:id="@+id/search"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:text="@string/EMPTY_TEXT"
+        android:padding="20dp"
+        android:hint="@string/QUERY_HINT"
+        android:background="#FFFFFF"
+        android:translationZ="1dp"
+        android:layout_margin="10dp"
+        android:elevation="@dimen/cardview_compat_inset_shadow"
         app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <ImageView
+        android:id="@+id/search_icon"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginEnd="20dp"
+        android:translationZ="2dp"
+        android:src="@drawable/magnifyingglass"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/search"
+        app:layout_constraintBottom_toBottomOf="@id/search" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/placeResult"
-        android:layout_width="match_parent"
+    <com.kakao.vectormap.MapView
+        android:id="@+id/map_view"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/searchHistory"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/place_item"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/searchHistory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/search"
-        app:layout_constraintBottom_toTopOf="@+id/placeResult"
-        tools:listitem="@layout/search_history_item"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/search"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
