--- a/app/src/main/res/layout/place_card.xml
+++ b/app/src/main/res/layout/place_card.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
         android:gravity="left">
 
@@ -26,7 +26,7 @@
             android:layout_weight="2"
             android:gravity="center"
             android:text="장소"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/place_location"
@@ -35,7 +35,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="location"
-            android:textSize="15sp"
+            android:textSize="10sp"
             android:textColor="#494848"/>
     </LinearLayout>
 
@@ -47,7 +47,8 @@
     <TextView
         android:id="@+id/place_category"
         android:layout_width="wrap_content"
-        android:layout_height="15dp"
+        android:layout_height="30dp"
+        android:gravity="center"
         android:layout_gravity="right"
         android:text="카테고리"
         android:textColor="#494848"/>
